nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: nginx-config
        configMap:
          name: confnginx
      - emptyDir: {}
        name: www
 # These containers are run during pod initialization
      containers:
      - name: nginx
#        image: markcardiff/nginxserver:v6
        image: nginx:latest
        imagePullPolicy: Always
        volumeMounts:
         - name: nginx-config
           mountPath: /etc/nginx/conf.d
         - name: www
           mountPath: /usr/share/nginx/html
        ports:
         - name: http
           containerPort: 80
         - name: https
           containerPort: 443
        # HTTP Health Check
        livenessProbe:
           httpGet:
            path: /
            port: 80



#        ports:
 #     - containerPort: 80
