php-fpm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
spec:
  selector:
    matchLabels:
      app: php
  replicas: 2
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: markcardiff/php-fpm-mysqli:v1
#        ports:
 #     - containerPort: 9000
