ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ingress-service"
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: nginx-service
          servicePort: 80
