NetworkPolicy.yaml
#allow all
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: allow-all
#  namespace: default
#spec:
#  podSelector: {} 
#  ingress: 
#  - {}
#  policyTypes:
#  - Ingress

---

#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: default-deny-all
#  namespace: default
#spec:
#  podSelector: {}
#  ingress: []

---
#Policy to deny all access
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-deny-all
spec:
  podSelector:
    matchLabels:
      app: db
  ingress: []

---
#Policy to allow the php pod to access the db pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow
spec:
  podSelector:
    matchLabels:
      app: db
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: php
